updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am a dancer and computer programming student.</p>
+      <p>I am a computer programming student.</p>
       <h1>Where I'm From</h1>
       <p>Union, NJ</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I am a dancer and also love exploring different genres of music.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p><My dream job is to be a software engineer or work in cyber security./p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Union,NJ</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I've always found it really cool how different websites can be and have wondered what goes into making one, now I have the opportunity to learn and create my own. </p>
     </section>
 
     <footer id="footer">
